# SVG-MB-Control

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build-release.ps1  control.example.json
config/: control.example.json  control.release.json  runtime_policy_write_live.json
docs/: CONTROL_LOOP.md  READ_LOOP.md  REPO_ROLE.md  RUNTIME_HOME.md  WRITE_ORCHESTRATION.md  discovery-repo-containment.md
scripts/: Build-Release.ps1
src/: amd_reader.cpp  amd_reader.h  bench_bridge.cpp  bench_bridge.h  control_config.cpp  control_config.h  control_loop.cpp  control_loop.h  control_policy.cpp  control_policy.h  direct_runtime_snapshot.cpp  direct_runtime_snapshot.h  fan_writer.cpp  fan_writer.h  gpu_reader.cpp  gpu_reader.h  main.cpp  pending_writes.cpp  pending_writes.h  read_loop.cpp  read_loop.h  runtime_snapshot.cpp  runtime_snapshot.h  runtime_write_policy.cpp  runtime_write_policy.h  write_orchestrator.cpp  write_orchestrator.h
tests/: fake_bench.cpp  test_smoke.py
